--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       height: 100vh;
-      background: url('picture.jpg') no-repeat center center fixed;
+      background: url('blue2.jpg') no-repeat center center fixed;
       background-size: cover;
     }
   </style>
