--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title>Moje Tło</title>
+  <title>Default</title>
   <style>
     body {
       margin: 0;
